# ic_example_rust_profile

./: dfx.json  package-lock.json  package.json
src/rust_profile_backend/: Cargo.toml  rust_profile_backend.did
src/rust_profile_backend/src/: events.rs  lib.rs  profile.rs  profile_update_logic.rs
