[package]
name = "rust_profile_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8.4"
ic-cdk = "0.8.1"
ic-cdk-macros = "0.6.10"
ic-stable-structures = "0.5.4"
#ic-cdk-timers = "0.1" # Feel free to remove this dependency if you don't need timers
serde = "1.0"
